--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,8 @@
 doctype html
 // saved from url=(0017)http://marcio.io/
 head
+  meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1')
+
   link(rel='stylesheet',href='/stylesheets/poole.css')
   link(rel='stylesheet', href='./stylesheets/hyde.css')
   link(rel='stylesheet', href='./stylesheets/style.css')
