story page design

--- a/views/index.jade
+++ b/views/index.jade
@@ -37,11 +37,11 @@ block content
               h3.story-title Inostasia
 
           li.story
-            a(href="#").story-link 
+            a(href="/story").story-link 
               h3.story-title Revolution
 
           li.story
-            a(href="#").story-link 
+            a(href="/story").story-link 
               h3.story-title Fresh as a Non taken idiot
 
       .stories-title-div
@@ -50,13 +50,16 @@ block content
       .stories-container
         ul.stories-list
           li.story
-            a(href="#").story-link
+            a(href="/story").story-link
               h3.story-title Not for today
 
           li.story
-            a(href="#").story-link 
+            a(href="/story").story-link 
               h3.story-title Maybe when I find your mama
           li.story
-            a(href="#").story-link 
+            a(href="/story").story-link 
               h3.story-title Meteorites in June
+
+ 
+
 
