--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,8 +6,11 @@ head
   link(rel='stylesheet',href='/stylesheets/poole.css')
   link(rel='stylesheet', href='./stylesheets/hyde.css')
   link(rel='stylesheet', href='./stylesheets/style.css')
-
+  link(rel='stylesheet', href='./stylesheets/bootstrap.css')
   link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Raleway')
 
   
   block content
+
+  script(src='https://code.jquery.com/jquery-2.1.1.min.js')
+  script(src='javascripts/bootstrap.min.js')
