--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,7 @@
 body {
 	background-image: url("../images/background1.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .stories-title-div {
@@ -45,4 +47,11 @@ body {
 
 .story-title{ 
 	font-weight: 100;
+}
+
+.story-container {
+	background-color: #F1FAF6;
+	max-width: 600px;
+	margin-left: auto;
+	margin-right: auto;
 }
