--- a/views/index.jade
+++ b/views/index.jade
@@ -27,39 +27,27 @@ block content
           |     © 2015 Diego Frasele. All rights reserved.
     
     .container.story-main
-      .stories-title-div
-        h1.stories-title Stories
+      .center-flex
+          
+          .story-section
+            
 
-      .stories-container
-        ul.stories-list
-          li.story
-            a(href="#").story-link
-              h3.story-title Inostasia
+            .stories-container
+              ul.stories-list
+                li.story
+                  a(href="#").story-link
+                    h3.story-title Stories
 
-          li.story
-            a(href="/story").story-link 
-              h3.story-title Revolution
+                li.story
+                  a(href="/story").story-link 
+                    h3.story-title Articles
 
-          li.story
-            a(href="/story").story-link 
-              h3.story-title Fresh as a Non taken idiot
+                li.story
+                  a(href="/story").story-link 
+                    h3.story-title Themes
+          
+                
 
-      .stories-title-div
-        h1.stories-title Articles
-
-      .stories-container
-        ul.stories-list
-          li.story
-            a(href="/story").story-link
-              h3.story-title Not for today
-
-          li.story
-            a(href="/story").story-link 
-              h3.story-title Maybe when I find your mama
-          li.story
-            a(href="/story").story-link 
-              h3.story-title Meteorites in June
-
- 
+     
 
 
