--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,9 @@ block content
     .sidebar
       .container.sidebar-sticky
         .sidebar-about
-          h1.brand diego fraselle
+          h1.brand
+            a(href="/") diego fraselle
+
           p.lead
             | writer
         ul.sidebar-nav
@@ -28,14 +30,11 @@ block content
     
     .container.story-main
       .center-flex
-          
           .story-section
-            
-
             .stories-container
               ul.stories-list
                 li.story
-                  a(href="#").story-link
+                  a(href="/stories").story-link
                     h3.story-title Stories
 
                 li.story
@@ -44,7 +43,9 @@ block content
 
                 li.story
                   a(href="/story").story-link 
-                    h3.story-title Themes
+                    h3.story-title Serials
+
+
           
                 
 
