--- a/views/story.jade
+++ b/views/story.jade
@@ -10,9 +10,9 @@ block content
 
 			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago.
 
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago.
+			
 
 			
 
-		button Purchase
+		button.btn.btn-default Purchase for $1.99
 
