--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,18 +51,35 @@ body {
 
 .story-title{ 
 	font-weight: 100;
+	margin:50px;
+	text-align: center;
 }
 
+.story-title-text {
+	color:white;
+}
 .story-container {
-	background-color: #F1FAF6;
-	max-width: 600px;
+	max-width: 700px;
 	margin-left: auto;
 	margin-right: auto;
+	color:white;
 }
 
 .story-section{
 	margin-top:90px;
 	margin-bottom: 90px;
+
+}
+.story-content {
+
+	background-color: #272723;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 30px;
+}
+
+.story-footer {
+
 }
 
 .list-wrapper{
@@ -74,7 +91,6 @@ body {
 	max-width: 600px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: #F1FAF6;
 
 }
 
@@ -94,11 +110,13 @@ body {
 }
 
 .list-stories-container {
-	margin:20px;
+	margin: 10px;
 }
 
 .story-item {
-	padding:10px;
+	padding:20px;
+	  background-color: #F1FAF6;
+  margin-bottom: 40px;
 }
 .story-item-title{
 	text-align: center;
