--- a/views/stories.jade
+++ b/views/stories.jade
@@ -1,31 +1,7 @@
 extends layout
 
 block content
-    .sidebar
-      .container.sidebar-sticky
-        .sidebar-about
-          h1.brand
-            a(href="/") diego fraselle
-          p.lead
-            | writer
-        ul.sidebar-nav
-          li
-            a(href="#") Blog
-
-          li
-            a(href='http://marcio.io/blog') About me
-          
-          li
-            a(href='#') Contact
-            
-          hr 
-
-          li 
-            a(href="#") VIP
-          
-        p.footnote
-          br
-          |     © 2015 Diego Frasele. All rights reserved.
+    include partials/sidebar
 
     .container.story-main
       .list-wrapper
@@ -42,7 +18,7 @@ block content
 
                     .story-item-content
                         .story-item-textpreview
-                            p Me la suda como no sabes, hasta el punto en el que no se que demonios podriamos hacer para completar con la sanidad de lo que ha ocurrido. No quiero que vuelva a suceder esto de nuevo, me entiendes?
+                            p La planicie en las afueras de la ciudad de Mu era casa de cientos de diferentes especies de escarabajos Lumia. En las noches, las casas desde el tercer aro podian disfrutar de la ilusion de vivir en una tierra de fantasia, con luces multicolores flotando de un lugar a otro. Para los residentes de los dos primeros aros, la mejor vista era las diferentes sombras de gris del concreto de la muralla interior. 
 
 
 
