--- a/views/index.jade
+++ b/views/index.jade
@@ -12,13 +12,15 @@ block content
                     a(href="/stories").story-link
                       h3.story-title Stories
 
-                  li.story
-                    a(href="/serials").story-link 
-                      h3.story-title Serials
+                  
 
                   li.story
                     a(href="/bits").story-link 
                       h3.story-title Bits and Pieces
+
+                  li.story
+                    a(href="/30under30").story-link
+                      h3.story-title 60 under 30
 
 
           
