--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -5,21 +5,22 @@
         a(href="/") diego fraselle
 
       p.lead
-        | writer
+        | writer | traveller
     ul.sidebar-nav
-      li
-        a(href="#") Take a chance
-
-      li
-        a(href='http://marcio.io/blog') About me
       
       li
-        a(href='#') Contact
+        a(href='http://marcio.io/blog') About me
+
+      li
+        a(href='#') How to help
+
+      li
+        a(href="diegofraselle.com") En español
         
       
       
     p.footnote
       br
-      |     © 2015 Diego Frasele. All rights reserved.
+      |     © 2015 Diego Fraselle. All rights reserved.
   
    
