--- a/views/stories.jade
+++ b/views/stories.jade
@@ -14,7 +14,7 @@ block content
                 .story-item
                     .story-item-title
                         h3.item-title Renacimiento
-                        span.post-date published July 7, 2015 |      5 min read
+                        
 
                     .story-item-content
                         .story-item-textpreview
@@ -24,46 +24,33 @@ block content
 
     
                         .story-item-buttons
-                            a.btn.btn-default.story-button Preview
-                            a.btn.btn-default.story-button Purchase
+                            a.btn.btn-success.story-button(href='/story') Read now
+                            
 
-                        .story-item-tags 
-                            span.post-date Tags: 
-                                a(href="#") fantasy
-                                , 
-                                a(href="#") horror
+                        
                 .story-item
                     .story-item-title
                         h3.item-title Cumbres incompetentes
-                        span.post-date published July 7, 2015
+                        
 
                     .story-item-content
                         .story-item-textpreview
                             p Me la suda como no sabes, hasta el punto en el que no se que demonios podriamos hacer para completar con la sanidad de lo que ha ocurrido. No quiero que vuelva a suceder esto de nuevo, me entiendes?
                         .story-item-buttons
-                            a.btn.btn-default.story-button  Preview
-                            a.btn.btn-default.story-button  Purchase
+                            a.btn.btn-success.story-button(href='/story') Read now
+                            
 
-                        .story-item-tags 
-                            span.post-date Tags: 
-                                a(href="#") fantasy
-                                , 
-                                a(href="#") horror
+                        
                 .story-item
                     .story-item-title
                         h3.item-title Perro
-                        span.post-date published July 7, 2015 | 15 min read
-
+                        
                     .story-item-content
                         .story-item-textpreview
                             p Me la suda como no sabes, hasta el punto en el que no se que demonios podriamos hacer para completar con la sanidad de lo que ha ocurrido. No quiero que vuelva a suceder esto de nuevo, me entiendes?
                         .story-item-buttons
-                            a.btn.btn-default.story-button  Preview
-                            a.btn.btn-default.story-button  Purchase
+                            a.btn.btn-success.story-button(href='/story') Read now
+                            
 
-                        .story-item-tags 
-                            span.post-date Tags: 
-                                a(href="#") fantasy
-                                , 
-                                a(href="#") horror
+                        
 
