--- a/views/story.jade
+++ b/views/story.jade
@@ -3,38 +3,27 @@ extends layout
 block content
 	.container.story-container
 		.story-title
-			h1.story-title-text Story
-			span.post-date July 7
+			h1.story-title-text Angeles Caidos
+			span.post-date Published July 7
 		.story-content
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago.
+			p El cono central de la centrifuga nuclear estaba atascado, retorcido en el medio de tubos y cables colapsados en una de las tantas embestidas de pequenos asteroides y cometas. Mina jadeaba, por dentro del traje que llevaba puesto, haciendo un esfuerzo terso por evitar que el sudor le cayera en los ojos, mientras que usaba los retromotores que traia en los codos para jalar el desastre, y terminar con el trabajo antes que la estacion pasara la linea de regreso. En la radio, Mina escucho el jadeo lento de su camarada, Rope. En silencio por mas de un minuto. Eso deberia ser un nuevo record, penso. De pronto, sintio el metal crujir y los tubos partirse y con esto el nucleo floto, libre, hacia un extremo del cuarto central. Sin pensarlo, Mina desactivo los retromotores y se impulso hacia el nucleo, mientras sacaba de uno de sus bolsillos externos la bolsa de grafito que contendria el premio y sus peligros, de regreso a casa. 
 
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago.
 
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago
+			p “Escucho victoria?” dijo Rope “avisame para abrir la champana y empezar la celebracion” 
+			
+			p Con los retazos del esfuerzo aun en su pecho, Mina jadeo “No hasta que este en el nave, Rope. Nada peor que celebrar por adelantado” Mina atrapo el nucleo, lo introdujo a la bolsa y ato la misma en el pack de su traje. Girando, se dirigio a la puerta de la habitacion. Esta vez como impulso utilizo los retromotores, deslizandose suavemente hacia el pasillo. En el casco, por dentro, el display mostraba una seccion del mapa de la estacion, junto con senales de sus signos vitales que por ese entonces iban descendiendo, hasta aparacar en normales. 
 
-		.story-content
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago.
+			p “Diecisiete minutos a la linea, kid. Mas vale que te apures” Rope menciono en la linea. Mia dijo “activar cuenta regresiva, diecisiete min, en tres, dos, uno” En el display, en la esquina opuesta al mapa, aparecio un timer, y en el los segundos desaparecian, simples, dejando sus memorias efimeras flotar en la inmensidad del espacio.
 
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago.
 
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago
-		.story-content
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago.
 
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago. After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago
 
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago
-		.story-content
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago.
 
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago. After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago
-		.story-content
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago. After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago
-
-			p After years of using Integrated Development Environments (IDE) during my Windows progamming days, such as Visual Basic IDE, Borland Delphi IDE, Visual C++ and more recent Visual Studio, I have ditched all of those when I switched to Mac OS X about 10 years ago.
+			.story-footer
+				.btn.btn-success.story-button How to help
+				.btn.btn-primary.story-button Share on Facebook
+				.btn.btn-primary.story-button Share on Twitter
 
 			
 
-		.story-footer
-			button.btn.btn-default Purchase for $1.99
-
+	
