change to spanish

--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -5,22 +5,20 @@
         a(href="/") diego fraselle
 
       p.lead
-        | writer | traveller
+        | escritor | viajero
     ul.sidebar-nav
       
       li
-        a(href='http://marcio.io/blog') About me
+        a(href='http://marcio.io/blog') Acerca de mi
 
       li
-        a(href='#') How to help
+        a(href='#') Como ayudar
 
       li
-        a(href="diegofraselle.com") En español
+        a(href="diegofraselle.com") In English
         
       
       
     p.footnote
       br
-      |     © 2015 Diego Fraselle. All rights reserved.
-  
-   
+      |     © 2015 Diego Fraselle. Todos los derechos reservados
