--- a/views/stories.jade
+++ b/views/stories.jade
@@ -7,7 +7,7 @@ block content
       .list-wrapper
         .list-container
             .list-title-div
-              h1.list-title Stories
+              h1.list-title Historias
 
             
             .list-stories-container
@@ -24,7 +24,7 @@ block content
 
     
                         .story-item-buttons
-                            a.btn.btn-success.story-button(href='/story') Read now
+                            a.btn.btn-success.story-button(href='/story') Leer ahora
                             
 
                         
@@ -37,7 +37,7 @@ block content
                         .story-item-textpreview
                             p Me la suda como no sabes, hasta el punto en el que no se que demonios podriamos hacer para completar con la sanidad de lo que ha ocurrido. No quiero que vuelva a suceder esto de nuevo, me entiendes?
                         .story-item-buttons
-                            a.btn.btn-success.story-button(href='/story') Read now
+                            a.btn.btn-success.story-button(href='/story') Leer ahora
                             
 
                         
@@ -49,7 +49,7 @@ block content
                         .story-item-textpreview
                             p Me la suda como no sabes, hasta el punto en el que no se que demonios podriamos hacer para completar con la sanidad de lo que ha ocurrido. No quiero que vuelva a suceder esto de nuevo, me entiendes?
                         .story-item-buttons
-                            a.btn.btn-success.story-button(href='/story') Read now
+                            a.btn.btn-success.story-button(href='/story') Leer ahora
                             
 
                         
