--- a/views/story.jade
+++ b/views/story.jade
@@ -4,7 +4,7 @@ block content
 	.container.story-container
 		.story-title
 			h1.story-title-text Angeles Caidos
-			span.post-date Published July 7
+			span.post-date Publicado July 7
 		.story-content
 			p El cono central de la centrifuga nuclear estaba atascado, retorcido en el medio de tubos y cables colapsados en una de las tantas embestidas de pequenos asteroides y cometas. Mina jadeaba, por dentro del traje que llevaba puesto, haciendo un esfuerzo terso por evitar que el sudor le cayera en los ojos, mientras que usaba los retromotores que traia en los codos para jalar el desastre, y terminar con el trabajo antes que la estacion pasara la linea de regreso. En la radio, Mina escucho el jadeo lento de su camarada, Rope. En silencio por mas de un minuto. Eso deberia ser un nuevo record, penso. De pronto, sintio el metal crujir y los tubos partirse y con esto el nucleo floto, libre, hacia un extremo del cuarto central. Sin pensarlo, Mina desactivo los retromotores y se impulso hacia el nucleo, mientras sacaba de uno de sus bolsillos externos la bolsa de grafito que contendria el premio y sus peligros, de regreso a casa. 
 
@@ -20,10 +20,9 @@ block content
 
 
 			.story-footer
-				.btn.btn-success.story-button How to help
-				.btn.btn-primary.story-button Share on Facebook
-				.btn.btn-primary.story-button Share on Twitter
-
+				.btn.btn-success.story-button Como ayudar
+				.btn.btn-primary.story-button Compartir en Facebook
+				.btn.btn-primary.story-button Compartir en Twitter
 			
 
 	
