--- a/views/index.jade
+++ b/views/index.jade
@@ -10,18 +10,15 @@ block content
                 ul.stories-list
                   li.story
                     a(href="/stories").story-link
-                      h3.story-title Stories
-
-                  
+                      h3.story-title Historias
 
                   li.story
                     a(href="/bits").story-link 
-                      h3.story-title Bits and Pieces
+                      h3.story-title Pedazos y tonteras
 
                   li.story
                     a(href="/30under30").story-link
-                      h3.story-title 60 under 30
-
+                      h3.story-title Viajando
 
           
                 
