--- a/views/bits.jade
+++ b/views/bits.jade
@@ -1,5 +1,28 @@
 extends layout
 
 block content
-	include partials/sidebar
-	
+    include partials/sidebar
+
+    .container.story-main
+      .list-wrapper
+        .list-container
+            
+
+            
+            .list-stories-container
+                
+                .story-item
+                    .list-title-div
+                        h1.list-title Opinion
+
+                    h2 Politica
+
+                    a(href="#") El extranjero 
+                    br
+                    a(href="#") Comentarios ineficientes
+
+                    h2 Religion
+
+                    a(href="#") No
+                    br
+                    a(href="#") Definicion Despota
