--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
 
                   li.story
                     a(href="/bits").story-link 
-                      h3.story-title Pedazos y tonteras
+                      h3.story-title Opinion
 
                   li.story
                     a(href="/traveling").story-link
