--- a/views/serials.jade
+++ b/views/serials.jade
@@ -1,4 +1,24 @@
 extends layout
 
 block content
-	include partials/sidebar
+    include partials/sidebar
+
+    .container.story-main
+      .list-wrapper
+        .list-container
+            
+
+            
+            .list-stories-container
+                
+                .story-item
+                    .list-title-div
+                        h1.list-title Cronica de Viaje
+
+                    h2 Snaps
+
+                    a(href="#") El extranjero 
+                    br
+                    a(href="#") Comentarios ineficientes
+
+                    
