--- a/views/stories.jade
+++ b/views/stories.jade
@@ -6,51 +6,23 @@ block content
     .container.story-main
       .list-wrapper
         .list-container
-            .list-title-div
-              h1.list-title Historias
+            
 
             
             .list-stories-container
+                
                 .story-item
-                    .story-item-title
-                        h3.item-title Renacimiento
-                        
+                    .list-title-div
+                        h1.list-title Historias
 
-                    .story-item-content
-                        .story-item-textpreview
-                            p La planicie en las afueras de la ciudad de Mu era casa de cientos de diferentes especies de escarabajos Lumia. En las noches, las casas desde el tercer aro podian disfrutar de la ilusion de vivir en una tierra de fantasia, con luces multicolores flotando de un lugar a otro. Para los residentes de los dos primeros aros, la mejor vista era las diferentes sombras de gris del concreto de la muralla interior. 
+                    h2 Cortas
 
+                    a(href="#") El extranjero 
+                    br
+                    a(href="#") Comentarios ineficientes
 
+                    h2 Largas
 
-    
-                        .story-item-buttons
-                            a.btn.btn-success.story-button(href='/story') Leer ahora
-                            
-
-                        
-                .story-item
-                    .story-item-title
-                        h3.item-title Cumbres incompetentes
-                        
-
-                    .story-item-content
-                        .story-item-textpreview
-                            p Me la suda como no sabes, hasta el punto en el que no se que demonios podriamos hacer para completar con la sanidad de lo que ha ocurrido. No quiero que vuelva a suceder esto de nuevo, me entiendes?
-                        .story-item-buttons
-                            a.btn.btn-success.story-button(href='/story') Leer ahora
-                            
-
-                        
-                .story-item
-                    .story-item-title
-                        h3.item-title Perro
-                        
-                    .story-item-content
-                        .story-item-textpreview
-                            p Me la suda como no sabes, hasta el punto en el que no se que demonios podriamos hacer para completar con la sanidad de lo que ha ocurrido. No quiero que vuelva a suceder esto de nuevo, me entiendes?
-                        .story-item-buttons
-                            a.btn.btn-success.story-button(href='/story') Leer ahora
-                            
-
-                        
-
+                    a(href="#") No
+                    br
+                    a(href="#") Definicion Despota
