--- a/views/bits.jade
+++ b/views/bits.jade
@@ -13,9 +13,9 @@ block content
                 
                 .story-item
                     .list-title-div
-                        h1.list-title Opinion
+                        h1.list-title Ideas
 
-                    h2 Politica
+                    h2 Politics
 
                     a(href="#") El extranjero 
                     br
