--- a/views/serials.jade
+++ b/views/serials.jade
@@ -13,7 +13,7 @@ block content
                 
                 .story-item
                     .list-title-div
-                        h1.list-title Cronica de Viaje
+                        h1.list-title Travel Log
 
                     h2 Snaps
 
