--- a/views/stories.jade
+++ b/views/stories.jade
@@ -13,15 +13,15 @@ block content
                 
                 .story-item
                     .list-title-div
-                        h1.list-title Historias
+                        h1.list-title Stories
 
-                    h2 Cortas
+                    h2 Short
 
                     a(href="#") El extranjero 
                     br
                     a(href="#") Comentarios ineficientes
 
-                    h2 Largas
+                    h2 Long
 
                     a(href="#") No
                     br
