--- a/views/index.jade
+++ b/views/index.jade
@@ -10,15 +10,15 @@ block content
                 ul.stories-list
                   li.story
                     a(href="/stories").story-link
-                      h3.story-title Historias
+                      h3.story-title Stories
 
                   li.story
                     a(href="/bits").story-link 
-                      h3.story-title Opinion
+                      h3.story-title Ideas
 
                   li.story
                     a(href="/traveling").story-link
-                      h3.story-title Viajando
+                      h3.story-title Travelling
 
           
                 
