--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -5,20 +5,21 @@
         a(href="/") diego fraselle
 
       p.lead
-        | escritor | viajero
+        | writer | traveler
     ul.sidebar-nav
       
       li
-        a(href='http://marcio.io/blog') Acerca de mi
+        a(href='english.diegofraselle.com/about') About me
 
       li
-        a(href='#') Como ayudar
+        a(href='#') How to help
 
       li
-        a(href="diegofraselle.com") In English
+        a(href="diegofraselle.com") en Español
         
       
       
     p.footnote
       br
-      |     © 2015 Diego Fraselle. Todos los derechos reservados
+      |     © 2016 Diego Fraselle. All rights reserved 
+      
