design changes and routes

--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -9,10 +9,10 @@
     ul.sidebar-nav
       
       li
-        a(href='english.diegofraselle.com/about') About me
+        a(href='/about') About me
 
       li
-        a(href='#') How to help
+        a(href='/help') How to help
 
       li
         a(href="diegofraselle.com") en Español
