basic template complete

--- a/views/about.jade
+++ b/views/about.jade
@@ -12,3 +12,5 @@ block content
                 .story-item
                     .list-title-div
                         h1.list-title Diego Fraselle
+
+                    p Born in Lima, Peru. Failed entrepreneur, self taught musician and programmer. Writing came to me as an escape from living. What I found was a passion for the craft and in those days where the muse seems to be happy with me, a precious nugget from this other world that lives under our eyes(yes I am a very dramatic idiot). After two years of living in the chaos of the travelling world, tired of crazy hookups and drunken binges, I settled in Amsterdam, where I live and write. 
