--- a/views/help.jade
+++ b/views/help.jade
@@ -11,4 +11,7 @@ block content
                 
                 .story-item
                     .list-title-div
-                        h1.list-title Diego Fraselle
+                        h1.list-title How to help
+
+                    p(text-align:justified) I know that the chance of succeding in any artistic endeavor is very small(like really small) but being that I live in this fantastic modern world I’ve come to find some interesting tools that can, if not hedge your bets against the indiference of the world, at least give a little nudge for one to try at least have a living with his work. So if you like what I do, you can play your most aristocratic fantasies and become a patron of the arts by helping with a donation, either a recurrent ammount or a single payment of your choice. 
+                    p For those of you  who like the customer variety better you can pre-order my short story collection or participate in my members club, to get access to preview chapters, launch parties(if you are in whatever town I am) and other cool perks.
