--- a/views/index.jade
+++ b/views/index.jade
@@ -10,15 +10,15 @@ block content
                 ul.stories-list
                   li.story
                     a(href="/stories").story-link
-                      h3.story-title Stories
+                      h3.story-title Short Stories
 
                   li.story
-                    a(href="/bits").story-link 
-                      h3.story-title Ideas
+                    a(href="/madman").story-link 
+                      h3.story-title Notes of a Traveling Madman
 
                   li.story
-                    a(href="/traveling").story-link
-                      h3.story-title Travelling
+                    a(href="/poetry").story-link
+                      h3.story-title Poetry
 
           
                 
