--- a/views/poetry.jade
+++ b/views/poetry.jade
@@ -13,12 +13,11 @@ block content
                 
                 .story-item
                     .list-title-div
-                        h1.list-title Travel Log
+                        h1.list-title Poetry
 
-                    h2 Snaps
 
-                    a(href="#") El extranjero 
-                    br
-                    a(href="#") Comentarios ineficientes
+                        if poems 
+                            h1 this
+                        h2 No published poems at the moment
 
                     
